# iceberg-cpp

./: .asf.yaml  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  CNAME  LICENSE  Makefile  NOTICE  README.md  SECURITY-THREAT-MODEL.md  cmake-format.py  index.html  meson.build  meson.options  requirements.txt  sitemap.xml
src/iceberg/: CMakeLists.txt  IcebergConfig.cmake.in  arrow_c_data.h  arrow_c_data_guard_internal.cc  arrow_c_data_guard_internal.h  arrow_c_data_internal.cc  arrow_c_data_internal.h  arrow_c_data_util.cc  arrow_c_data_util_internal.h  arrow_row_builder.cc  arrow_row_builder_internal.h  avro.h  catalog.h  constants.h  delete_file_index.cc  delete_file_index.h  demo.cc  demo.h  demo_table.cc  demo_table.h  error.h  exception.h  expected.h  expression.cc  expression.h  file_format.h  file_io.cc  file_io.h  file_io_registry.cc  file_reader.cc  file_reader.h  file_writer.cc  file_writer.h  iceberg-config.cmake.in  iceberg_bundle-config.cmake.in  iceberg_bundle_export.h  iceberg_data-config.cmake.in  iceberg_data_export.h  iceberg_export.h  inheritable_metadata.cc  (+89 more)
src/iceberg/arrow/: CMakeLists.txt  arrow_c_data_util.cc  arrow_error_transform_internal.h  arrow_file_io.h  arrow_fs_file_io.cc  arrow_fs_file_io.h  arrow_fs_file_io_internal.h  arrow_io.cc  arrow_io_internal.h  arrow_register.cc  arrow_register.h  demo_arrow.cc  demo_arrow.h  metadata_column_util.cc  metadata_column_util_internal.h  nanoarrow_status_internal.h
src/iceberg/avro/: CMakeLists.txt  avro_constants.h  avro_data_util.cc  avro_data_util_internal.h  avro_direct_decoder.cc  avro_direct_decoder_internal.h  avro_direct_encoder.cc  avro_direct_encoder_internal.h  avro_reader.cc  avro_reader.h  avro_register.cc  avro_register.h  avro_scan.cc  avro_schema_util.cc  avro_schema_util_internal.h  avro_stream_internal.cc  avro_stream_internal.h  avro_writer.cc  avro_writer.h  constants.h  demo_avro.cc  demo_avro.h
src/iceberg/catalog/: CMakeLists.txt  in_memory_catalog.cc  in_memory_catalog.h  meson.build  session_catalog.cc  session_catalog.h  session_context.cc  session_context.h
src/iceberg/cli/: CMakeLists.txt  cli_app.cc  cli_app.h  command.h  iceberg_cli.cc  isolation_runner.cc  isolation_runner.h  runner.cc  runner.h  sql_parser.cc  sql_parser.h  string_util.cc  string_util.h
src/iceberg/data/: CMakeLists.txt  data_writer.cc  data_writer.h  delete_filter.cc  delete_filter.h  delete_loader.cc  delete_loader.h  equality_delete_writer.cc  equality_delete_writer.h  file_scan_task_reader.cc  file_scan_task_reader.h  meson.build  position_delete_writer.cc  position_delete_writer.h  writer.cc  writer.h
src/iceberg/deletes/: position_delete_index.cc  position_delete_index.h  position_delete_range_consumer.cc  position_delete_range_consumer.h  roaring_position_bitmap.cc  roaring_position_bitmap.h
src/iceberg/encryption/: CMakeLists.txt  encrypted_key.h  meson.build
src/iceberg/expression/: CMakeLists.txt  aggregate.cc  aggregate.h  binder.cc  binder.h  decimal.cc  decimal.h  evaluator.cc  evaluator.h  expression.cc  expression.h  expression_visitor.h  expressions.cc  expressions.h  inclusive_metrics_evaluator.cc  inclusive_metrics_evaluator.h  json_serde.cc  json_serde_internal.h  literal.cc  literal.h  manifest_evaluator.cc  manifest_evaluator.h  meson.build  predicate.cc  predicate.h  projections.cc  projections.h  residual_evaluator.cc  residual_evaluator.h  rewrite_not.cc  rewrite_not.h  strict_metrics_evaluator.cc  strict_metrics_evaluator.h  term.cc  term.h
src/iceberg/inspect/: CMakeLists.txt  history_table.cc  history_table.h  meson.build  metadata_table.cc  metadata_table.h  snapshots_table.cc  snapshots_table.h
src/iceberg/io/: CMakeLists.txt  file_io.h  fs_file_io.cc  fs_file_io.h  fs_file_reader.cc  fs_file_reader.h  fs_file_writer.cc  fs_file_writer.h
src/iceberg/logging/: CMakeLists.txt  cerr_logger.cc  cerr_logger.h  log_level.h  logger.cc  logger.h  meson.build
src/iceberg/manifest/: CMakeLists.txt  manifest_adapter.cc  manifest_adapter_internal.h  manifest_entry.cc  manifest_entry.h  manifest_filter_manager.cc  manifest_filter_manager.h  manifest_group.cc  manifest_group.h  manifest_list.cc  manifest_list.h  manifest_merge_manager.cc  manifest_merge_manager.h  manifest_reader.cc  manifest_reader.h  manifest_reader_internal.cc  manifest_reader_internal.h  manifest_util.cc  manifest_util_internal.h  manifest_writer.cc  manifest_writer.h  meson.build  v1_metadata.cc  (+7 more)
test/: CMakeLists.txt  arrow_fs_file_io_test.cc  arrow_test.cc  avro_data_test.cc  avro_schema_test.cc  avro_stream_test.cc  avro_test.cc  config_test.cc  decimal_test.cc  expression_test.cc  file_scan_task_test.cc  gzip_decompress_test.cc  in_memory_catalog_test.cc  json_internal_test.cc  literal_test.cc  local_file_io_test.cc  manifest_list_reader_test.cc  manifest_reader_test.cc  matchers.h  metadata_io_test.cc  metadata_serde_test.cc  name_mapping_test.cc  parquet_schema_test.cc  parquet_test.cc  partition_field_test.cc  partition_spec_test.cc  roaring_test.cc  schema_field_test.cc  schema_json_test.cc  schema_test.cc  schema_util_test.cc  snapshot_test.cc  sort_field_test.cc  sort_order_test.cc  string_util_test.cc  string_utils_test.cc  temp_file_test_base.h  transform_test.cc  type_test.cc  visit_type_internal_test.cc  (+1 more)
test/arrow/: CMakeLists.txt
test/avro/: CMakeLists.txt
test/common/: CMakeLists.txt  status_test.cc
test/core/: CMakeLists.txt  avro_unittest.cc  core_catch2.cc  core_gtest.cc  core_unittest.cc  expected_test.cc  file_io_test.cc  schema_field_test.cc  type_test.cc
test/io/: CMakeLists.txt  fs_file_io_test.cc
test/resources/: 2ddf1bc9-830b-4015-aced-c060df36f150-m0.avro  TableMetadataStatisticsFiles.json  TableMetadataV2MissingPartitionSpecs.json  TableMetadataV2MissingSchemas.json  TableMetadataV2ValidMinimal.json  snap-251167482216575399-1-ccb6dbcb-0611-48da-be68-bd506ea63188.avro  snap-7412193043800610213-1-2bccd69e-d642-4816-bba0-261cd9bd0d93.avro  snap-7532614258660258098-1-eafd2972-f58e-4185-9237-6378f564787e.avro
(+15055 files in other folders)
