# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# Many of the options that CMake provides do not need to be implemented
# in this configuration, as Meson offers built-in support for them.
# For instance, instead of ICEBERG_BUILD_STATIC and ICEBERG_BUILD_SHARED
# you can pass the `--default_library=<option>` to the meson setup command,
# where <option> is one of "shared", "static", or "both"
#
# ICEBERG_ENABLE_ASAN / ICEBERG_ENABLE_UBSAN can be specified with
# the -Db_sanitize=address,undefined option. Starting in Meson 1.8,
# you can provide any array of sanitizers to that same argument,
# including for example the "fuzzing" option
#
# ICEBERG_INSTALL_LIBDIR / ICEBERG_INSTALL_BINDIR / ICEBERG_INSTALL_INCLUDEDIR
# and ICEBERG_INSTALL_DOCDIR correspond to Meson's --libdir / --bindir /
# --includedir / --datadir arguments, respectively

option(
    'rest',
    type: 'feature',
    description: 'Build rest catalog client',
    value: 'enabled',
)

option(
    'rest_integration_test',
    type: 'feature',
    description: 'Build integration test for rest catalog',
    value: 'disabled',
)

option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
